--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
       "test": "./node_modules/.bin/cypress run --spec 'cypress/integration/firsttest.spec.js' --reporter mocha-allure-reporter",
-      "test1": "./node_modules/.bin/cypress run --spec 'cypress/integration/*.spec.js' --record --key b2f67bf6-ade4-474d-a77f-a9857e794134",
+      "test1": "./node_modules/.bin/cypress run --spec 'cypress/integration/*.spec.js' --record --key b2f67bf6-ade4-474d-a77f-a9857e794134 --parallel",
       "report": "./node_modules/.bin/allure generate allure-results --clean-o allure-report",
       "open": "./node_modules/.bin/cypress open",
       "wipe": "rm -r allure-results/ allure-report/"
