--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-    "name": "cypress-tests-with-allure-reporter",
-    "version": "1.0.0",
-    "description": "cypress tests with allure reporter",
-    "main": "index.js",
-    "scripts": {
-      "test": "./node_modules/.bin/cypress run --spec 'cypress/integration/firsttest.spec.js' --reporter mocha-allure-reporter",
-      "test1": "./node_modules/.bin/cypress run --spec 'cypress/integration/SignInPageCommands.spec.js' --record --key b2f67bf6-ade4-474d-a77f-a9857e794134 --parallel",
-      "report": "./node_modules/.bin/allure generate allure-results --clean-o allure-report",
-      "open": "./node_modules/.bin/cypress open",
-      "wipe": "rm -r allure-results/ allure-report/"
-      
-    },
-    "repository": {
-      "type": "git",
-      "url": ""
-    },
-
-    
-    "homepage": "",
-    "devDependencies": {
-      "cypress": "^3.8.0",
-      "cypress-file-upload": "^3.5.1",
-      "cypress-wait-until": "^1.6.1"
-    },
-    "dependencies": {
-      "allure-commandline": "^2.13.0",
-      "mocha": "^6.2.2",
-      "mocha-allure-reporter": "^1.4.0"
-    }
+  "name": "cypress-tests-with-allure-reporter",
+  "version": "1.0.0",
+  "description": "cypress tests with allure reporter",
+  "main": "index.js",
+  "scripts": {
+    "test": "./node_modules/.bin/cypress run --spec 'cypress/integration/firsttest.spec.js' --reporter mocha-allure-reporter",
+    "test1": "./node_modules/.bin/cypress run --spec 'cypress/integration/SignInPageCommands.spec.js' --record --key b2f67bf6-ade4-474d-a77f-a9857e794134 --parallel",
+    "report": "./node_modules/.bin/allure generate allure-results --clean-o allure-report",
+    "open": "./node_modules/.bin/cypress open",
+    "wipe": "rm -r allure-results/ allure-report/"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "homepage": "",
+  "devDependencies": {
+    "@shelex/cypress-allure-plugin": "^2.26.3",
+    "cypress": "^3.8.0",
+    "cypress-file-upload": "^3.5.1",
+    "cypress-wait-until": "^1.6.1"
+  },
+  "dependencies": {
+    "allure-commandline": "^2.13.0",
+    "mocha": "^6.2.2",
+    "mocha-allure-reporter": "^1.4.0"
   }
-  
+}
