--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "test1": "./node_modules/.bin/cypress run --spec 'cypress/integration/SignInPageCommands.spec.js' --record --key b2f67bf6-ade4-474d-a77f-a9857e794134 --parallel",
     "report": "./node_modules/.bin/allure generate allure-results --clean-o allure-report",
     "open": "./node_modules/.bin/cypress open",
-    "wipe": "rm -r allure-results/ allure-report/"
+    "wipe": "rm -r allure-results/ allure-report/",
+    "clean:reports": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports ",    
+    "pretest": "npm run clean:reports",    
+    "scripts": "cypress run",    
+    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports -- inline",    
+    "posttest": "npm run combine-reports && npm run generate-report",    
+    "test3" : "npm run scripts || npm run posttest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +30,11 @@
   },
   "dependencies": {
     "allure-commandline": "^2.13.0",
-    "mocha": "^6.2.2",
-    "mocha-allure-reporter": "^1.4.0"
+    "cypress-multi-reporters": "^1.5.0",
+    "mocha": "^6.2.3",
+    "mocha-allure-reporter": "^1.4.0",
+    "mochawesome": "^7.0.1",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.0.1"
   }
 }
