--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "description": "cypress tests with allure reporter",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/cypress run --spec 'cypress/integration/SignInPageCommands.spec.js' --reporter mocha-allure-reporter",
-    "test1": "./node_modules/.bin/cypress run --spec 'cypress/integration/SignInPageCommands.spec.js' --record --key b2f67bf6-ade4-474d-a77f-a9857e794134 --parallel",
-    "report": "./node_modules/.bin/allure generate allure-results --clean-o allure-report",
-    "open": "./node_modules/.bin/cypress open",
-    "wipe": "rm -r allure-results/ allure-report/",
-    "clean:reports": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports ",    
-    "pretest": "npm run clean:reports",    
-    "scripts": "cypress run",    
-    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
-    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports -- inline",    
-    "posttest": "npm run combine-reports && npm run generate-report",    
-    "test3" : "npm run scripts || npm run posttest"
+    "cy:run": "cypress run --env allure=true,allureResultsPath=allure-results",
+    "allure:report": "allure generate allure-results --clean -o allure-report",
+    "allure:clear": "rm -rf allure-results allure-report/ && rm -rf allure-results/ allure-report/ && rm -rf cypress/screenshots && rm -rf cypress/videos",
+    "pretest": "npm run allure:clear",
+    "test": "npm run cy:run || npm run posttest",
+    "posttest": "npm run allure:report",
+    "telegram-massage-pass": "./node_modules/.bin/cypress run --config-file cypress_messenger.json --env message='Greetings! UI Tests are successfully passed on RealWorld App. ' cypress/messenger/telegram.spec.js",
+    "telegram-massage-fail": "./node_modules/.bin/cypress run --config-file cypress_messenger.json --env message='Alarm! UI Tests are failed on RealWorld App. ' cypress/messenger/telegram.spec.js ",
+    "scripts": "cypress run"
   },
   "repository": {
     "type": "git",
